# llm-news-analyzer

./: README.md  app.py  pyproject.toml  requirements.txt
LLM_news_analyzer/: article_classifier.py  article_preprocessor.py  article_summarizer.py  output_generator.py
templates/: index.html  results.html
templates/static/: styles.css
tests/: test_article_classifier.py  test_article_preprocessor.py  test_article_summarizer.py  test_output_generator.py
