[tool.poetry]
name = "news-classifier"
version = "0.1.0"
description = "A LLM based news article analysis tool."
authors = ["Md Zahidul Islam <zahidcseku@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
