[tool.poetry]
name = "LLM_news_analyzer"
version = "0.1.0"
description = "A LLM based news article analysis tool."
authors = ["Md Zahidul Islam <zahidcseku@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
langchain = {extras = ["all"], version = "^0.3.9"}
langchain-community = "^0.3.8"
langchain-openai = "^0.2.10"
python-dotenv = "^1.0.1"
langchain-huggingface = "^0.1.2"
transformers = "^4.46.3"
torch = "^2.5.1"
google-generativeai = ">=0.8.3"
fastapi = "^0.115.5"
python-multipart = "^0.0.18"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
